# iced-hot-reload

./: Cargo.toml  README.md
app_core/: Cargo.toml
app_core/src/: lib.rs
app_shell/: Cargo.toml
app_shell/src/: main.rs  shellapp.rs
shared_types/: Cargo.toml
shared_types/src/: lib.rs
